# sonar_image_proc

./: .drone.yml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  fips  fips.yml  libdraw_sonar.rosinstall  nodelet_plugins.xml  package.xml  serdp_common.rosinstall  setup.py  sonar_image_proc.rosinstall
cmake/: FindTinyXML2.cmake
examples/FFmpeg-encode-example/: CMakeLists.txt  README.md  Settings.h  VideoEncoder.cpp  VideoEncoder.h  ffmpegInclude.h  fips  main.cpp
helpers/: epilogue.txt  inferno_color_map.csv  make_color_map.py  prologue.txt
include/draw_sonar/: ColorMaps.h  DataStructures.h  DrawSonar.h
include/libblackmagic/: DataTypes.h  DeckLink.h  Identical3DFrames.h  InputConfig.h  InputHandler.h  OpenCvDeckLinkFrame.h  OutputHandler.h  SDICameraControl.h  SDIMessageBuffer.h  ThreadSynchronizer.h
include/serdp_common/: ColorMaps.h  DataStructures.h  DrawSonar.h  OpenCVDisplay.h  PingDecoder.h  draw_sonar.h
include/serdprecorder/: CameraState.h  IoServiceThread.h  OpenCVDisplay.h  SerdpRecorder.h  SonarClient.h  VideoRecorder.h  drawSonar.h
include/sonar_image_proc/: AbstractSonarInterface.h  ColorMaps.h  DataStructures.h  DrawSonar.h  HistogramGenerator.h  OverlayImage.h  SonarDrawer.h
launch/: sonar_postproc.launch
lib/: AbstractSonarInterface.cpp  CMakeLists.txt  ColorMaps.cpp  DataStructures.cpp  DataTypes.cpp  DeckLink.cpp  DrawSonar.cpp  HistogramGenerator.cpp  Identical3DFrames.cpp  InputHandler.cpp  OldDrawSonar.cpp  OpenCVDisplay.cpp  OutputHandler.cpp  OverlayImage.cpp  PingDecoder.cpp  SDICameraControl.cpp  SerdpRecorder.cpp  SonarClient.cpp  SonarDrawer.cpp  VideoRecorder.cpp  drawSonar.cpp
python/: README.md  histogram_drawer  ndarray_converter.cpp  ndarray_converter.h  old_setup.py  py_draw_sonar.cpp  test.py
python/draw_sonar/: __init__.py
python/sonar_image_proc/: sonar_msg_metadata.py
ros/cfg/: DrawSonar.cfg
ros/include/sonar_image_proc/: log_sonar_image_msg_interface.h  sonar_image_msg_interface.h
ros/src/: draw_sonar_node.cpp  draw_sonar_nodelet.cpp  sonar_postprocessor_node.cpp  sonar_postprocessor_nodelet.cpp
ros/tools/: bag2sonar.cpp
scripts/: sonar_fov.py  sonar_pointcloud.py
src_ros/: draw_sonar_node.cpp  draw_sonar_nodelet.cpp  sonar_image_msg_interface.h
test/unit/: test_draw_sonar.cpp  test_string_to_displaymode.cpp  test_video_recorder.cpp
tools/: BmRecorder.cpp  CMakeLists.txt  CameraState.h  GPMF_print.c  GPMF_print.cpp  IoServiceThread.h  SerdpRecorder.cpp  gpmf_parser.cpp  oculus_gpmf_recorder.cpp
