<?xml version="1.0"?>
<package format="2">
  <name>draw_sonar</name>
  <version>0.0.1</version>
  <description>A ROS version of  functions </description>

  <maintainer email="amarburg@uw.edu">Aaron Marburg</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pybind11_catkin</build_depend>
  <exec_depend>pybind11_catkin</exec_depend>

</package>
