<?xml version="1.0"?>
<package format="2">
  <name>sonar_image_proc</name>
  <version>0.0.1</version>
  <description>Common code for manipulating imaging sonar data.</description>

  <maintainer email="amarburg@uw.edu">Aaron Marburg</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>

  <depend>acoustic_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>nodelet_topic_tools</depend>
  <depend>std_msgs</depend>

  <build_depend>pybind11_catkin</build_depend>
  <exec_depend>pybind11_catkin</exec_depend>

  <build_depend>nodelet</build_depend>
  <exec_depend>nodelet</exec_depend>


  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
